<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/edit_project_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nome_progetto" />

    <EditText
        android:id="@+id/edit_task_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nome_task" />

    <EditText
        android:id="@+id/edit_task_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/descrizione_task" />

    <EditText
        android:id="@+id/edit_developer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/developer" />

    <EditText
        android:id="@+id/edit_expiration_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/data_di_scadenza"
        android:inputType="date" />
</LinearLayout>
