<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <ImageView
        android:id="@+id/ic_account"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="?attr/actionBarSize"
        android:src="@drawable/id_account_fragment" />

    <TextView
        android:id="@+id/user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ic_account"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="15dp"
        android:text="@string/nome_utente"
        android:textSize="18sp"
        android:textStyle="bold" />

    <!-- Email Row -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/user_name"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email_title"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/user_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/email_utente"
            android:textSize="16sp" />
    </LinearLayout>

    <!-- Account Type Row -->
    <LinearLayout
        android:id="@+id/account_type_line"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/user_name"
        android:layout_marginTop="25dp"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tipo_di_account_title"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/user_account_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/tipo_utente"
            android:textSize="16sp" />
    </LinearLayout>

    <!-- Projects Row -->
    <LinearLayout
        android:id="@+id/projects_line"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/account_type_line"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/projects_title"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/user_projects"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/projects"
            android:textSize="16sp" />
    </LinearLayout>

    <!-- Tasks Row -->
    <LinearLayout
        android:id="@+id/tasks_line"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/projects_line"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tasks_title"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/user_tasks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/tasks"
            android:textSize="16sp" />
    </LinearLayout>

    <!-- Skills Row -->
    <LinearLayout
        android:id="@+id/skills_line"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/tasks_line"
        android:layout_marginTop="5dp"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/skills_title"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/add_button"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_marginStart="200dp"
            android:text="@string/aggiungi_skill"
            android:textSize="10sp"
            android:textStyle="bold" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/skills_recycler_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_below="@id/skills_line"/>
</RelativeLayout>
