<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/edit_task_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nome_task" />

    <EditText
        android:id="@+id/edit_subtask_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nome_subtask" />

    <!-- Spinner per la Priorità -->
    <Spinner
        android:id="@+id/spinner_priority"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="5dp"
        android:entries="@array/priority_options" />

    <!-- Spinner per lo Stato -->
    <Spinner
        android:id="@+id/spinner_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="5dp"
        android:entries="@array/status_options" />

    <EditText
        android:id="@+id/edit_expiration_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/data_di_scadenza"
        android:inputType="date" />
</LinearLayout>
