<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:backgroundTint="@color/white"
    android:layout_margin="5dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="8dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

    <TextView
        android:id="@+id/notification_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/notifica"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_alignParentStart="true"/>

    <TextView
        android:id="@+id/notification_timestamp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/_00_00_0000_00_00"
        android:textSize="16sp"
        android:layout_below="@id/notification_message"
        android:layout_alignParentStart="true"/>

        <ImageView
            android:id="@+id/close_notification"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:src="@drawable/ic_close"
            android:contentDescription="@string/chiudi_la_notifica" />

    </RelativeLayout>

</androidx.cardview.widget.CardView>